--- a/packages/client/src/app/navigation/navigation.component.html
+++ b/packages/client/src/app/navigation/navigation.component.html
@@ -6,6 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/students">Students</a>
+      <a mat-list-item routerLink="/locations">Locations</a>
       <a mat-list-item routerLink="/passes">Passes</a>
     </mat-nav-list>
   </mat-sidenav>
