add duration property to passes

--- a/packages/client/src/app/passes-table/passes-table.component.html
+++ b/packages/client/src/app/passes-table/passes-table.component.html
@@ -20,6 +20,11 @@
       <td mat-cell *matCellDef="let row">{{row.startTime.toLocaleString(timeFormat)}}</td>
     </ng-container>
 
+    <ng-container matColumnDef="durationMinutes">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Duration</th>
+      <td mat-cell *matCellDef="let row">{{row.durationMinutes}} minutes</td>
+    </ng-container>
+
     <ng-container matColumnDef="endTime">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>End Time</th>
       <td mat-cell *matCellDef="let row">{{row.endTime?.toLocaleString(timeFormat)}}</td>
