--- a/packages/client/src/app/navigation/navigation.component.html
+++ b/packages/client/src/app/navigation/navigation.component.html
@@ -5,6 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item routerLink="/active-passes">Active Passes</a>
       <a mat-list-item routerLink="/students">Students</a>
       <a mat-list-item routerLink="/locations">Locations</a>
       <a mat-list-item routerLink="/passes">Passes</a>
