add pass changes notification on active passes dashboard

--- a/packages/client/src/app/active-passes/active-passes.component.html
+++ b/packages/client/src/app/active-passes/active-passes.component.html
@@ -9,6 +9,7 @@
       <p><b>Source: </b>{{pass.source.name}}</p>
       <p><b>Destination: </b>{{pass.destination.name}}</p>
       <p><mat-divider /></p>
+      <p><b>Pass ID: </b>{{pass.id}}</p>
       <p><b>Started At: </b>{{pass.startTime}}</p>
       <p><b>Duration: </b>{{pass.durationMinutes}} minutes</p>
       <p><b>Remaining: </b>{{pass.remainingDuration$ | async}}</p>
