--- a/packages/client/src/app/passes-table/passes-table.component.html
+++ b/packages/client/src/app/passes-table/passes-table.component.html
@@ -2,43 +2,49 @@
   <table mat-table class="full-width-table" matSort aria-label="Elements">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
     </ng-container>
 
     <ng-container matColumnDef="sourceId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Source Id</th>
-      <td mat-cell *matCellDef="let row">{{row.sourceId}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.sourceId }}</td>
     </ng-container>
 
     <ng-container matColumnDef="destinationId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Destination Id</th>
-      <td mat-cell *matCellDef="let row">{{row.destinationId}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.destinationId }}</td>
     </ng-container>
 
     <ng-container matColumnDef="startTime">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Start Time</th>
-      <td mat-cell *matCellDef="let row">{{row.startTime.toLocaleString(timeFormat)}}</td>
+      <td mat-cell *matCellDef="let row">
+        {{ row.startTime.toLocaleString(timeFormat) }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="durationMinutes">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Duration</th>
-      <td mat-cell *matCellDef="let row">{{row.durationMinutes}} minutes</td>
+      <td mat-cell *matCellDef="let row">{{ row.durationMinutes }} minutes</td>
     </ng-container>
 
     <ng-container matColumnDef="endTime">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>End Time</th>
-      <td mat-cell *matCellDef="let row">{{row.endTime?.toLocaleString(timeFormat)}}</td>
+      <td mat-cell *matCellDef="let row">
+        {{ row.endTime?.toLocaleString(timeFormat) }}
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <mat-paginator #paginator
-      [length]="dataSource.length$ | async"
-      [pageIndex]="0"
-      [pageSize]="10"
-      [pageSizeOptions]="[5, 10, 20]"
-      aria-label="Select page">
+  <mat-paginator
+    #paginator
+    [length]="dataSource.length$ | async"
+    [pageIndex]="0"
+    [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 20]"
+    aria-label="Select page"
+  >
   </mat-paginator>
 </div>
