--- a/packages/client/src/app/websocket-receiver/websocket-receiver.component.html
+++ b/packages/client/src/app/websocket-receiver/websocket-receiver.component.html
@@ -1,11 +1,13 @@
 <div>
-<p>websocket-receiver works!</p>
-<form>
-  <label for="message-input">Message</label>
-  <input type="text"
-         id="message"
-         name="message"
-         [(ngModel)]="formModel.message" />
-</form>
-<p>{{messages$ | async | json}}</p>
+  <p>websocket-receiver works!</p>
+  <form>
+    <label for="message-input">Message</label>
+    <input
+      type="text"
+      id="message"
+      name="message"
+      [(ngModel)]="formModel.message"
+    />
+  </form>
+  <p>{{ messages$ | async | json }}</p>
 </div>
