--- a/packages/client/src/app/active-passes/active-passes.component.html
+++ b/packages/client/src/app/active-passes/active-passes.component.html
@@ -3,26 +3,26 @@
     <mat-card-header>
       <img
         mat-card-avatar
-        src="{{ pass.student.profilePictureUrl }}"
-        alt="{{ pass.student.name }} profile picture"
+        src="{{ pass?.student?.profilePictureUrl }}"
+        alt="{{ pass?.student?.name }} profile picture"
       />
-      <mat-card-title>{{ pass.student.name }}</mat-card-title>
-      <mat-card-subtitle>Grade {{ pass.student.grade }}</mat-card-subtitle>
+      <mat-card-title>{{ pass?.student?.name }}</mat-card-title>
+      <mat-card-subtitle>Grade {{ pass?.student?.grade }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <p><b>Source: </b>{{ pass.source.name }}</p>
-      <p><b>Destination: </b>{{ pass.destination.name }}</p>
+      <p><b>Source: </b>{{ pass?.source?.name }}</p>
+      <p><b>Destination: </b>{{ pass?.destination?.name }}</p>
       <p><mat-divider /></p>
-      <p><b>Pass ID: </b>{{ pass.id }}</p>
-      <p><b>Started At: </b>{{ pass.startTime }}</p>
-      <p><b>Duration: </b>{{ pass.durationMinutes }} minutes</p>
-      <p><b>Remaining: </b>{{ pass.remainingDuration$ | async }}</p>
+      <p><b>Pass ID: </b>{{ pass?.id }}</p>
+      <p><b>Started At: </b>{{ pass?.startTime }}</p>
+      <p><b>Duration: </b>{{ pass?.durationMinutes }} minutes</p>
+      <p><b>Remaining: </b>{{ pass?.remainingDuration$ | async }}</p>
       <p></p>
     </mat-card-content>
     <mat-card-footer>
       <mat-progress-bar
         mode="determinate"
-        [value]="pass.remainingPercent$ | async"
+        [value]="pass?.remainingPercent$ | async"
       ></mat-progress-bar>
     </mat-card-footer>
   </mat-card>
